--- a/package.json
+++ b/package.json
@@ -6,8 +6,27 @@
     "start": "next start -p ${PORT:=3000}"
   },
   "dependencies": {
+    "@emotion/react": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^5.0.0-beta.0",
+    "@material-ui/data-grid": "^4.0.0-alpha.33",
+    "@material-ui/icons": "^5.0.0-beta.0",
+    "@material-ui/lab": "^5.0.0-alpha.39",
+    "@material-ui/styles": "^5.0.0-beta.0",
+    "@material-ui/utils": "^5.0.0-beta.0",
+    "@tabler/icons": "^1.39.1",
+    "axios": "^0.21.1",
+    "dotenv": "^14.0.0",
+    "formik": "^2.2.6",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-device-detect": "^1.17.0",
+    "react-dom": "^17.0.2",
+    "react-perfect-scrollbar": "^1.5.8",
+    "yup": "^0.32.9"
+  },
+  "devDependencies": {
+    "@material-ui/codemod": "^5.0.0-alpha.35",
+    "sass": "^1.32.11"
   }
 }
