--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formik": "^2.2.6",
     "next": "latest",
     "react": "^17.0.2",
+    "react-datepicker": "^4.6.0",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-perfect-scrollbar": "^1.5.8",
