--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=dev node server.js",
     "build": "next build",
-    "start": "cross-env NODE_ENV=production && node server.js"
+    "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@emotion/react": "^11.4.0",
